fixed align of copyright block

--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -23,5 +23,6 @@
         color: #607d8b;
         font-size: 14px;
         font-weight: 400;
+        text-align: right;
     }
 }
